# cynide

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md
.github/workflows/: examples.yml
docs/: language_design.md
examples/: 01_hello.cy  02_variables.cy  03_arithmetic.cy  04_functions.cy  05_control_flow.cy  06_loops.cy  07_fibonacci.cy  08_factorial.cy  09_string_operations.cy  10_fizzbuzz.cy  11_nested_loops.cy  12_boolean_logic.cy  13_comprehensive.cy
src/: CMakeLists.txt  ast.h  codegen.cpp  codegen.h  cylang.cpp  cynide.cpp  lexer.cpp  lexer.h  parser.cpp  parser.h  sema.cpp  sema.h  stage.h  token.cpp  token.h
